# Copytrading-bot

./: .env  .env.example  .gitignore  5XdnbCGrc11GD3n4KywjRkkZ6s2Kr8wMoji8yKVbJGsLdPqWz9a8KAEuk8KHbEjNeDUDP92tD2cjVGqDSfjgTYgU.json  CLAUDE.md  CU_SAVE.MD  Cargo.toml  README.md  env.txt  raw_grpc.json  repomix-output.xml  usage_guide.MD
.cargo/: config.toml
.cursor/rules/: general.mdc
src/: async_log.rs  config.rs  copytrade.rs  executor.rs  lazy_signature.rs  main.rs  nonce.rs  program_registry.rs  transaction_processor.rs
src/parsers/: mod.rs  pump_amm.rs  pump_fun.rs
src/swap/: common.rs  constants.rs  mod.rs  pump.rs  pump_amm.rs
