[package]
name = "new-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5"
base64 = "0.22"
hex = "0.4"
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
bs58 = "0.5.1"
env_logger = "0.11.3"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false ,features = ["plugin"] }
solana-sdk = "2.1.1"
solana-transaction-status = "2.1.1"
solana-program = "2.1.1"
solana-account-decoder-client-types = "2.1.1"
solana-rpc-client = "=2.1.1"
solana-rpc-client-api = "=2.1.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_with = "3.0"
serde_json = "1.0.135"
lazy_static = "1.4.0"
smallvec = "1.11"
solana-account-decoder = "2.1.1"
solana-client = "2.1.1"
spl-token = "6.0"
spl-token-2022 = "4.0"
spl-associated-token-account = "4.0"
rand = "0.8"
phf = { version = "0.11", features = ["macros"] }
bumpalo = "3.14"
thiserror = "1.0"
dotenvy = "0.15"
bincode = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
quinn-proto = "=0.11.13"
url = "2.5.7"
rayon = "1.11.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

